--- a/css/main.css
+++ b/css/main.css
@@ -800,7 +800,7 @@ ul {
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media (min-width: 768px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .modal {
     min-width: 450px;
   }
@@ -905,6 +905,14 @@ ul {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+  cursor: pointer;
+}
+@media screen and (max-width: 767px) {
+  .modal__policy {
+    align-items: flex-end;
+    font-size: 12px;
+    line-height: 1.16;
+  }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .modal__policy {
