--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,7 +31,7 @@
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     min-width: 450px;
   }
 
@@ -131,6 +131,13 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: $main-text-color;
+    cursor: pointer;
+
+    @media screen and (max-width: 767px) {
+      align-items: flex-end;
+      font-size: 12px;
+      line-height: 1.16;
+    }
 
     @media (min-width: 768px) and (max-width: 1199px) {
       align-items: flex-end;
