--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -140,6 +140,7 @@
 
     @media (min-width: 768px) and (max-width: 1199px) {
       flex-direction: column;
+      align-items: center;
     }
   }
 
